--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- perhaps you will need this: -->
+    <!-- going to the repo will not not not not not not not not not not not not not not help -->
 
 
   </body>
